Last Changes in the sources on qStopMotion
===============================================================================

qStopMotion (1.0.0)
  * Fix Bugs
qStopMotion (0.9.10, release candidat 2)
  * Fix Bugs
  * Add the Qt runtime to the windows installer.
  * Add the ffmpeg runtime to the windows installer.
  * Add the download and installation of the 'GStreamer OSS Build' to the windows installer.
  * Now all actions are in the undo list. Undo is not possible.
qStopMotion (0.9.9, release candidat)
  * Fix Bugs
  * Feature freeze for version 1.0.0.
  * Conzentration of the image grabber functionality in the technical/grabber classes.
  * Change the selection of the video device from device type list to device name list.
  * Handling of more than one device per device type.
  * Check source code quality with "valgrind".
qStopMotion (0.9.8)
  * Fix Bugs
  * Selection of the capture butten functionality in the general tab of the
    preferences dialog in the preferences menu.
  * Insert Scenes functionality.
  * Insert Takes functionality.
  * Insert Frames functionality.
  * Check source code quality with "cppcheck".
qStopMotion (0.9.7)
  * Fix Bugs
  * Syncronous selection of scene, take and exposure in the project tree.
  * Remove Scenes functionality.
  * Remove Takes functionality.
  * Add / Remove Frames functionality
  * Implementation of the ProjectTab Class as a Observer
  * Remove all project tree functionality from the animation project
  * Concentration of all changes in the project, the views and the frontend in the
    Domain Factory class
  * Add undo history entries for all changes in the animation project
qStopMotion (0.9.6)
  * Fix Bugs
  * change the configuration system from automake to CMake.
  * using the CMakeLists.txt instead of qstopmotion.pro in the Qt-Creator.
  * Add installation functionality
  * Add packaging for Windows (NSIS Installer).
  * Add packaging for Linux RPM package.
  * Add packaging for Linux DEB package.